--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: 'CPAN module authoring tool'
 author:
-  - 'Tokuhiro Matsuno < tokuhirom @ gmail.com >'
+  - 'Tokuhiro Matsuno < tokuhirom@gmail.com >'
 build_requires:
   File::Which: 0
   Test::More: 0.98
@@ -11,7 +11,7 @@ configure_requires:
   CPAN::Meta::Prereqs: 0
   Module::Build: 0.38
 dynamic_config: 0
-generated_by: 'Minilla/v0.0.52, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Minilla/v0.0.54, CPAN::Meta::Converter version 2.130880'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,141 +25,103 @@ no_index:
     - share
     - eg
     - examples
+    - author
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v0.0.53
+    version: v0.0.54
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
-    version: 0
   Minilla::CLI::Build:
     file: lib/Minilla/CLI/Build.pm
-    version: 0
   Minilla::CLI::Clean:
     file: lib/Minilla/CLI/Clean.pm
-    version: 0
   Minilla::CLI::Dist:
     file: lib/Minilla/CLI/Dist.pm
-    version: 0
   Minilla::CLI::Help:
     file: lib/Minilla/CLI/Help.pm
-    version: 0
   Minilla::CLI::Install:
     file: lib/Minilla/CLI/Install.pm
-    version: 0
   Minilla::CLI::Migrate:
     file: lib/Minilla/CLI/Migrate.pm
-    version: 0
   Minilla::CLI::New:
     file: lib/Minilla/CLI/New.pm
-    version: 0
   Minilla::CLI::Release:
     file: lib/Minilla/CLI/Release.pm
-    version: 0
   Minilla::CLI::Test:
     file: lib/Minilla/CLI/Test.pm
-    version: 0
   Minilla::Error::CommandExit:
     file: lib/Minilla/Errors.pm
-    version: 0
   Minilla::Errors:
     file: lib/Minilla/Errors.pm
-    version: 0
   Minilla::FileGatherer:
     file: lib/Minilla/FileGatherer.pm
-    version: 0
   Minilla::Git:
     file: lib/Minilla/Git.pm
-    version: 0
   Minilla::Gitignore:
     file: lib/Minilla/Gitignore.pm
-    version: 0
   Minilla::License::Perl_5:
     file: lib/Minilla/License/Perl_5.pm
-    version: 0
   Minilla::License::Unknown:
     file: lib/Minilla/License/Unknown.pm
-    version: 0
   Minilla::Logger:
     file: lib/Minilla/Logger.pm
-    version: 0
   Minilla::Metadata:
     file: lib/Minilla/Metadata.pm
-    version: 0
   Minilla::Migrate:
     file: lib/Minilla/Migrate.pm
-    version: 0
   Minilla::ModuleMaker::ModuleBuild:
     file: lib/Minilla/ModuleMaker/ModuleBuild.pm
-    version: 0
   Minilla::Profile::Base:
     file: lib/Minilla/Profile/Base.pm
-    version: 0
   Minilla::Profile::Default:
     file: lib/Minilla/Profile/Default.pm
-    version: 0
   Minilla::Profile::ModuleBuild:
     file: lib/Minilla/Profile/ModuleBuild.pm
-    version: 0
   Minilla::Profile::XS:
     file: lib/Minilla/Profile/XS.pm
-    version: 0
   Minilla::Project:
     file: lib/Minilla/Project.pm
-    version: 0
   Minilla::Release::BumpVersion:
     file: lib/Minilla/Release/BumpVersion.pm
-    version: 0
   Minilla::Release::CheckChanges:
     file: lib/Minilla/Release/CheckChanges.pm
-    version: 0
   Minilla::Release::CheckOrigin:
     file: lib/Minilla/Release/CheckOrigin.pm
-    version: 0
   Minilla::Release::CheckUntrackedFiles:
     file: lib/Minilla/Release/CheckUntrackedFiles.pm
-    version: 0
   Minilla::Release::Commit:
     file: lib/Minilla/Release/Commit.pm
-    version: 0
   Minilla::Release::DistTest:
     file: lib/Minilla/Release/DistTest.pm
-    version: 0
   Minilla::Release::MakeDist:
     file: lib/Minilla/Release/MakeDist.pm
-    version: 0
   Minilla::Release::RegenerateMeta:
     file: lib/Minilla/Release/RegenerateMeta.pm
-    version: 0
   Minilla::Release::RewriteChanges:
     file: lib/Minilla/Release/RewriteChanges.pm
-    version: 0
   Minilla::Release::Tag:
     file: lib/Minilla/Release/Tag.pm
-    version: 0
   Minilla::Release::UploadToCPAN:
     file: lib/Minilla/Release/UploadToCPAN.pm
-    version: 0
   Minilla::ReleaseTest:
     file: lib/Minilla/ReleaseTest.pm
-    version: 0
   Minilla::Util:
     file: lib/Minilla/Util.pm
-    version: 0
   Minilla::WorkDir:
     file: lib/Minilla/WorkDir.pm
-    version: 0
+  Module::BumpVersion:
+    file: lib/Module/BumpVersion.pm
 recommends:
   CPAN::Meta::Check: 0
   CPAN::Uploader: 0
-  Perl::Version: 0
   Pod::Escapes: 0
-  Pod::Wordlist::hanekomu: 0
   Software::License: 0
   Test::CPAN::Meta: 0
   Test::MinimumVersion: 0.101080
   Test::Pod: 0
-  Test::Spelling: 0
+  Test::Spellunker: v0.0.15
+  Version::Next: 0
 requires:
   App::cpanminus: 1.6003
   Archive::Tar: 1.60
@@ -179,12 +141,17 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v0.0.53
+version: v0.0.54
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
   - 'Daisuke Murase <typester@cpan.org>'
   - 'kazhiramatsu <kazhiramatsu.github@gmail.com>'
-  - 'xaicron <xaicron@gmail.com>'
   - 'Tatsuhiko Miyagawa <miyagawa@bulknews.net>'
   - 'tokuhirom <tokuhirom@gmail.co>'
+  - 'Keiji, Yoshimi <walf443@gmail.com>'
+  - 'Fuji, Goro <g.psy.va@gmail.com>'
+  - 'Syohei YOSHIDA <syohex@gmail.com>'
+  - 'Masayuki Matsuki <y.songmu@gmail.com>'
+  - 'Daisuke Maki <lestrrat+github@gmail.com>'
+  - 'xaicron <xaicron@gmail.com>'
   - 'tokuhirom <tokuhirom@gmail.com>'
