--- a/META.yml
+++ b/META.yml
@@ -12,7 +12,7 @@ configure_requires:
   CPAN::Meta::Prereqs: 0
   Module::Build: 0.38
 dynamic_config: 0
-generated_by: 'Minilla/v0.3.0, CPAN::Meta::Converter version 2.130880'
+generated_by: 'Minilla/v0.3.2, CPAN::Meta::Converter version 2.130880'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -30,7 +30,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v0.3.2
+    version: v0.4.0
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -69,8 +69,6 @@ provides:
     file: lib/Minilla/Logger.pm
   Minilla::Metadata:
     file: lib/Minilla/Metadata.pm
-  Minilla::Metadata::PodParser:
-    file: lib/Minilla/Metadata/PodParser.pm
   Minilla::Migrate:
     file: lib/Minilla/Migrate.pm
   Minilla::ModuleMaker::ModuleBuild:
@@ -134,11 +132,10 @@ requires:
   File::pushd: 0
   Getopt::Long: 0
   Module::CPANfile: 0.9025
-  Module::Metadata: v1.0.11
+  Module::Metadata: 1.000012
   Moo: 1.001
   Path::Tiny: 0
   Pod::Markdown: 0
-  Pod::Simple: 0
   TOML: 0.92
   Term::ANSIColor: 0
   Time::Piece: 1.16
@@ -150,16 +147,16 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v0.3.2
+version: v0.4.0
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
   - 'Daisuke Murase <typester@cpan.org>'
   - 'kazhiramatsu <kazhiramatsu.github@gmail.com>'
   - 'Tatsuhiko Miyagawa <miyagawa@bulknews.net>'
   - 'Keiji, Yoshimi <walf443@gmail.com>'
-  - 'Fuji, Goro <g.psy.va@gmail.com>'
   - 'Daisuke Maki <lestrrat+github@gmail.com>'
-  - 'xaicron <xaicron@gmail.com>'
   - 'Masayuki Matsuki <y.songmu@gmail.com>'
   - 'Syohei YOSHIDA <syohex@gmail.com>'
+  - 'xaicron <xaicron@gmail.com>'
+  - 'Fuji, Goro <g.psy.va@gmail.com>'
   - 'tokuhirom <tokuhirom@gmail.com>'
