--- a/META.yml
+++ b/META.yml
@@ -12,7 +12,7 @@ configure_requires:
   CPAN::Meta::Prereqs: 0
   Module::Build: 0.38
 dynamic_config: 0
-generated_by: 'Minilla/v0.4.8, CPAN::Meta::Converter version 2.130880'
+generated_by: 'Minilla/v0.4.9, CPAN::Meta::Converter version 2.130880'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -30,7 +30,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v0.4.9
+    version: v0.5.0
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -146,7 +146,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v0.4.9
+version: v0.5.0
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
   - 'Daisuke Murase <typester@cpan.org>'
@@ -160,4 +160,5 @@ x_contributors:
   - 'moznion <moznion@gmail.com>'
   - 'Syohei YOSHIDA <syohex@gmail.com>'
   - 'Ryo Okamoto <ryo@aquahill.net>'
+  - 'GeJ <geraud@hyaku.nijuu.nana>'
   - 'tokuhirom <tokuhirom@gmail.com>'
