--- a/META.yml
+++ b/META.yml
@@ -12,7 +12,7 @@ configure_requires:
   CPAN::Meta::Prereqs: 0
   Module::Build: 0.38
 dynamic_config: 0
-generated_by: 'Minilla/v0.5.5, CPAN::Meta::Converter version 2.130880'
+generated_by: 'Minilla/v0.5.6, CPAN::Meta::Converter version 2.131560'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -30,7 +30,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v0.5.6
+    version: v0.6.0
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -49,6 +49,8 @@ provides:
     file: lib/Minilla/CLI/New.pm
   Minilla::CLI::Release:
     file: lib/Minilla/CLI/Release.pm
+  Minilla::CLI::Run:
+    file: lib/Minilla/CLI/Run.pm
   Minilla::CLI::Test:
     file: lib/Minilla/CLI/Test.pm
   Minilla::Error::CommandExit:
@@ -146,7 +148,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v0.5.6
+version: v0.6.0
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
   - 'Daisuke Murase <typester@cpan.org>'
@@ -156,9 +158,10 @@ x_contributors:
   - 'xaicron <xaicron@gmail.com>'
   - 'Fuji, Goro <g.psy.va@gmail.com>'
   - 'Masayuki Matsuki <y.songmu@gmail.com>'
-  - 'Daisuke Maki <lestrrat+github@gmail.com>'
   - 'Syohei YOSHIDA <syohex@gmail.com>'
   - 'GeJ <geraud@hyaku.nijuu.nana>'
   - 'moznion <moznion@gmail.com>'
   - 'Ryo Okamoto <ryo@aquahill.net>'
+  - 'Oleg Gashev <oleg@gashev.net>'
+  - 'Daisuke Maki <lestrrat+github@gmail.com>'
   - 'tokuhirom <tokuhirom@gmail.com>'
