--- a/META.yml
+++ b/META.yml
@@ -4,7 +4,6 @@ author:
   - 'Tokuhiro Matsuno < tokuhirom@gmail.com >'
 build_requires:
   File::Temp: 0
-  File::Which: 0
   Test::More: 0.98
   Test::Requires: 0
 configure_requires:
@@ -12,7 +11,7 @@ configure_requires:
   CPAN::Meta::Prereqs: 0
   Module::Build: 0.38
 dynamic_config: 0
-generated_by: 'Minilla/v0.6.3, CPAN::Meta::Converter version 2.131560'
+generated_by: 'Minilla/v0.6.5, CPAN::Meta::Converter version 2.132510'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -30,7 +29,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v0.6.5
+    version: v0.6.6
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -131,6 +130,7 @@ requires:
   Data::Section::Simple: 0.04
   ExtUtils::Manifest: 1.54
   File::Copy::Recursive: 0
+  File::Which: 0
   File::pushd: 0
   Getopt::Long: 2.36
   Module::CPANfile: 0.9025
@@ -149,7 +149,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v0.6.5
+version: v0.6.6
 x_authority: cpan:TOKUHIROM
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
@@ -157,7 +157,7 @@ x_contributors:
   - 'kazhiramatsu <kazhiramatsu.github@gmail.com>'
   - 'Tatsuhiko Miyagawa <miyagawa@bulknews.net>'
   - 'Keiji, Yoshimi <walf443@gmail.com>'
-  - 'xaicron <xaicron@gmail.com>'
+  - 'Yuji Shimada <xaicron@gmail.com>'
   - 'Fuji, Goro <g.psy.va@gmail.com>'
   - 'Masayuki Matsuki <y.songmu@gmail.com>'
   - 'Syohei YOSHIDA <syohex@gmail.com>'
@@ -166,4 +166,6 @@ x_contributors:
   - 'Ryo Okamoto <ryo@aquahill.net>'
   - 'Oleg Gashev <oleg@gashev.net>'
   - 'Daisuke Maki <lestrrat+github@gmail.com>'
+  - 'Kenichi Ishigaki <ishigaki@cpan.org>'
+  - 'keita.iseki <keita.iseki@gmail.com>'
   - 'tokuhirom <tokuhirom@gmail.com>'
