Import of TOKUHIROM/Minilla-v0.7.0 from CPAN.
gitpan-cpan-distribution: Minilla
gitpan-cpan-version:      v0.7.0
gitpan-cpan-path:         TOKUHIROM/Minilla-v0.7.0.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -12,7 +12,7 @@ configure_requires:
   CPAN::Meta::Prereqs: 0
   Module::Build: 0.38
 dynamic_config: 0
-generated_by: 'Minilla/v0.6.7, CPAN::Meta::Converter version 2.131490'
+generated_by: 'Minilla/v0.6.7, CPAN::Meta::Converter version 2.132661'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -30,7 +30,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v0.6.8
+    version: v0.7.0
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -150,7 +150,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v0.6.8
+version: v0.7.0
 x_authority: cpan:TOKUHIROM
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
@@ -163,10 +163,11 @@ x_contributors:
   - 'Masayuki Matsuki <y.songmu@gmail.com>'
   - 'Syohei YOSHIDA <syohex@gmail.com>'
   - 'GeJ <geraud@hyaku.nijuu.nana>'
-  - 'moznion <moznion@gmail.com>'
   - 'Ryo Okamoto <ryo@aquahill.net>'
   - 'Oleg Gashev <oleg@gashev.net>'
   - 'Daisuke Maki <lestrrat+github@gmail.com>'
   - 'Kenichi Ishigaki <ishigaki@cpan.org>'
   - 'keita.iseki <keita.iseki@gmail.com>'
+  - 'moznion <moznion@gmail.com>'
+  - 'hideo55 <hide.o.j55@gmail.com>'
   - 'tokuhirom <tokuhirom@gmail.com>'
