--- a/META.yml
+++ b/META.yml
@@ -12,7 +12,7 @@ configure_requires:
   CPAN::Meta::Prereqs: 0
   Module::Build: 0.38
 dynamic_config: 0
-generated_by: 'Minilla/v0.7.0, CPAN::Meta::Converter version 2.132510'
+generated_by: 'Minilla/v0.7.5, CPAN::Meta::Converter version 2.132510'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -27,10 +27,11 @@ no_index:
     - eg
     - examples
     - author
+    - builder
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v0.7.5
+    version: v0.8.0
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -150,7 +151,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v0.7.5
+version: v0.8.0
 x_authority: cpan:TOKUHIROM
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
@@ -171,4 +172,6 @@ x_contributors:
   - 'moznion <moznion@gmail.com>'
   - 'hideo55 <hide.o.j55@gmail.com>'
   - 'ITO Nobuaki <daydream.trippers@gmail.com>'
+  - 'ysasaki <aloelight@gmail.com>'
+  - 'Shoichi Kaji <skaji@outlook.com>'
   - 'tokuhirom <tokuhirom@gmail.com>'
