Import of TOKUHIROM/Minilla-v0.8.3 from CPAN.
gitpan-cpan-distribution: Minilla
gitpan-cpan-version:      v0.8.3
gitpan-cpan-path:         TOKUHIROM/Minilla-v0.8.3.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -6,6 +6,7 @@ build_requires:
   CPAN::Meta::Validator: 0
   File::Temp: 0
   Test::More: 0.98
+  Test::Output: 0
   Test::Requires: 0
 configure_requires:
   CPAN::Meta: 0
@@ -31,7 +32,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v0.8.2
+    version: v0.8.3
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -151,7 +152,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v0.8.2
+version: v0.8.3
 x_authority: cpan:TOKUHIROM
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
@@ -174,4 +175,5 @@ x_contributors:
   - 'ysasaki <aloelight@gmail.com>'
   - 'Shoichi Kaji <skaji@outlook.com>'
   - 'Kenichi Ishigaki <ishigaki@cpan.org>'
+  - 'Hiroyuki Akabane <hirobanex@gmail.com>'
   - 'tokuhirom <tokuhirom@gmail.com>'
