--- a/META.yml
+++ b/META.yml
@@ -13,7 +13,7 @@ configure_requires:
   CPAN::Meta::Prereqs: 0
   Module::Build: 0.38
 dynamic_config: 0
-generated_by: 'Minilla/v0.8.4, CPAN::Meta::Converter version 2.132830'
+generated_by: 'Minilla/v0.9.0, CPAN::Meta::Converter version 2.132830'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -32,7 +32,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v0.9.0
+    version: v0.9.1
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -152,7 +152,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v0.9.0
+version: v0.9.1
 x_authority: cpan:TOKUHIROM
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
@@ -162,8 +162,6 @@ x_contributors:
   - 'Keiji, Yoshimi <walf443@gmail.com>'
   - 'Yuji Shimada <xaicron@gmail.com>'
   - 'Fuji, Goro <g.psy.va@gmail.com>'
-  - 'Masayuki Matsuki <y.songmu@gmail.com>'
-  - 'Syohei YOSHIDA <syohex@gmail.com>'
   - 'GeJ <geraud@hyaku.nijuu.nana>'
   - 'Ryo Okamoto <ryo@aquahill.net>'
   - 'Oleg Gashev <oleg@gashev.net>'
@@ -177,4 +175,6 @@ x_contributors:
   - 'Hiroyuki Akabane <hirobanex@gmail.com>'
   - 'TAGOMORI Satoshi <tagomoris@gmail.com>'
   - 'Daisuke Maki <lestrrat+github@gmail.com>'
+  - 'Songmu <y.songmu@gmail.com>'
+  - 'Syohei YOSHIDA <syohex@gmail.com>'
   - 'tokuhirom <tokuhirom@gmail.com>'
