--- a/META.yml
+++ b/META.yml
@@ -13,7 +13,7 @@ configure_requires:
   CPAN::Meta::Prereqs: '0'
   Module::Build: '0.38'
 dynamic_config: 0
-generated_by: 'Minilla/v0.12.0, CPAN::Meta::Converter version 2.133380'
+generated_by: 'Minilla/v0.13.0, CPAN::Meta::Converter version 2.140640'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -32,7 +32,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v0.13.0
+    version: v0.14.0
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -122,9 +122,10 @@ provides:
 recommends:
   CPAN::Uploader: '0'
   Pod::Escapes: '0'
-  Software::License: '0'
+  Software::License: '0.103010'
   Test::CPAN::Meta: '0'
   Test::MinimumVersion: '0.101080'
+  Test::PAUSE::Permissions: '0'
   Test::Pod: '0'
   Test::Spellunker: v0.2.7
   Version::Next: '0'
@@ -132,6 +133,7 @@ requires:
   App::cpanminus: '1.6902'
   Archive::Tar: '1.60'
   CPAN::Meta: '0'
+  Config::Identity: '0'
   Data::Section::Simple: '0.04'
   ExtUtils::Manifest: '1.54'
   File::Copy::Recursive: '0'
@@ -154,7 +156,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v0.13.0
+version: v0.14.0
 x_authority: cpan:TOKUHIROM
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
@@ -179,8 +181,8 @@ x_contributors:
   - 'Jiro Nishiguchi <jiro@cpan.org>'
   - 'Masahiro Nagano <kazeburo@gmail.com>'
   - 'Helmut Wollmersdorfer <helmut@wollmersdorfer.at>'
-  - 'Syohei YOSHIDA <syohex@gmail.com>'
   - 'Kenichi Ishigaki <ishigaki@cpan.org>'
   - 'Graham Knop <haarg@haarg.org>'
   - 'moznion <moznion@gmail.com>'
+  - 'Syohei YOSHIDA <syohex@gmail.com>'
   - 'tokuhirom <tokuhirom@gmail.com>'
