--- a/META.yml
+++ b/META.yml
@@ -13,7 +13,7 @@ configure_requires:
   CPAN::Meta::Prereqs: '0'
   Module::Build: '0.38'
 dynamic_config: 0
-generated_by: 'Minilla/v0.13.0, CPAN::Meta::Converter version 2.140640'
+generated_by: 'Minilla/v0.14.1, CPAN::Meta::Converter version 2.140640'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -32,7 +32,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v0.14.1
+    version: v0.15.0
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -77,12 +77,16 @@ provides:
     file: lib/Minilla/Migrate.pm
   Minilla::ModuleMaker::ModuleBuild:
     file: lib/Minilla/ModuleMaker/ModuleBuild.pm
+  Minilla::ModuleMaker::ModuleBuildTiny:
+    file: lib/Minilla/ModuleMaker/ModuleBuildTiny.pm
   Minilla::Profile::Base:
     file: lib/Minilla/Profile/Base.pm
   Minilla::Profile::Default:
     file: lib/Minilla/Profile/Default.pm
   Minilla::Profile::ModuleBuild:
     file: lib/Minilla/Profile/ModuleBuild.pm
+  Minilla::Profile::ModuleBuildTiny:
+    file: lib/Minilla/Profile/ModuleBuildTiny.pm
   Minilla::Profile::XS:
     file: lib/Minilla/Profile/XS.pm
   Minilla::Project:
@@ -156,7 +160,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v0.14.1
+version: v0.15.0
 x_authority: cpan:TOKUHIROM
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
