--- a/META.yml
+++ b/META.yml
@@ -32,7 +32,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v0.15.1
+    version: v0.15.2
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -148,6 +148,7 @@ requires:
   Module::Metadata: '1.000012'
   Moo: '1.001'
   Pod::Markdown: '1.322'
+  TAP::Harness::Env: '0'
   TOML: '0.92'
   Term::ANSIColor: '0'
   Text::MicroTemplate: '0.20'
@@ -160,7 +161,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v0.15.1
+version: v0.15.2
 x_authority: cpan:TOKUHIROM
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
