Import of TOKUHIROM/Minilla-v1.1.0 from CPAN.
gitpan-cpan-distribution: Minilla
gitpan-cpan-version:      v1.1.0
gitpan-cpan-path:         TOKUHIROM/Minilla-v1.1.0.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -13,7 +13,7 @@ configure_requires:
   CPAN::Meta::Prereqs: '0'
   Module::Build: '0.38'
 dynamic_config: 0
-generated_by: 'Minilla/v0.15.1, CPAN::Meta::Converter version 2.140640'
+generated_by: 'Minilla/v0.13.0, CPAN::Meta::Converter version 2.133380'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -32,7 +32,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v1.0.0
+    version: v1.1.0
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -149,7 +149,7 @@ requires:
   Moo: '1.001'
   Pod::Markdown: '1.322'
   TAP::Harness::Env: '0'
-  TOML: '0.92'
+  TOML: '0.94'
   Term::ANSIColor: '0'
   Text::MicroTemplate: '0.20'
   Time::Piece: '1.16'
@@ -161,7 +161,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v1.0.0
+version: v1.1.0
 x_authority: cpan:TOKUHIROM
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
@@ -190,4 +190,5 @@ x_contributors:
   - 'Graham Knop <haarg@haarg.org>'
   - 'Syohei YOSHIDA <syohex@gmail.com>'
   - 'moznion <moznion@gmail.com>'
+  - 'Nathaniel Nutter <iam@nnutter.com>'
   - 'tokuhirom <tokuhirom@gmail.com>'
