Import of TOKUHIROM/Minilla-v2.1.2 from CPAN.
gitpan-cpan-distribution: Minilla
gitpan-cpan-version:      v2.1.2
gitpan-cpan-path:         TOKUHIROM/Minilla-v2.1.2.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -11,7 +11,7 @@ build_requires:
 configure_requires:
   Module::Build: '0.38'
 dynamic_config: 0
-generated_by: 'Minilla/v2.1.0, CPAN::Meta::Converter version 2.141520'
+generated_by: 'Minilla/v2.1.1, CPAN::Meta::Converter version 2.141520'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -30,7 +30,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v2.1.1
+    version: v2.1.2
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -151,7 +151,7 @@ requires:
   Moo: '1.001'
   Pod::Markdown: '1.322'
   TAP::Harness::Env: '0'
-  TOML: '0.94'
+  TOML: '0.95'
   Term::ANSIColor: '0'
   Text::MicroTemplate: '0.20'
   Time::Piece: '1.16'
@@ -163,7 +163,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v2.1.1
+version: v2.1.2
 x_authority: cpan:TOKUHIROM
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
@@ -193,4 +193,7 @@ x_contributors:
   - 'moznion <moznion@gmail.com>'
   - 'Nathaniel Nutter <iam@nnutter.com>'
   - 'Songmu <y.songmu@gmail.com>'
+  - 'Manni Heumann <github@lxxi.org>'
+  - 'iwata-motonori <motonori.iwata@dena.com>'
+  - 'aereal <aereal@aereal.org>'
   - 'tokuhirom <tokuhirom@gmail.com>'
