--- a/META.yml
+++ b/META.yml
@@ -5,6 +5,7 @@ author:
 build_requires:
   CPAN::Meta::Validator: '0'
   File::Temp: '0'
+  JSON: '0'
   Test::More: '0.98'
   Test::Output: '0'
   Test::Requires: '0'
@@ -30,7 +31,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v2.1.3
+    version: v2.2.0
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -163,7 +164,7 @@ resources:
   bugtracker: https://git@github.com/tokuhirom/Minilla/issues
   homepage: https://git@github.com/tokuhirom/Minilla
   repository: git://git@github.com/tokuhirom/Minilla.git
-version: v2.1.3
+version: v2.2.0
 x_authority: cpan:TOKUHIROM
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
@@ -183,17 +184,17 @@ x_contributors:
   - 'Shoichi Kaji <skaji@outlook.com>'
   - 'Hiroyuki Akabane <hirobanex@gmail.com>'
   - 'TAGOMORI Satoshi <tagomoris@gmail.com>'
-  - 'Daisuke Maki <lestrrat+github@gmail.com>'
   - 'Jiro Nishiguchi <jiro@cpan.org>'
   - 'Masahiro Nagano <kazeburo@gmail.com>'
   - 'Helmut Wollmersdorfer <helmut@wollmersdorfer.at>'
   - 'Kenichi Ishigaki <ishigaki@cpan.org>'
   - 'Graham Knop <haarg@haarg.org>'
   - 'Syohei YOSHIDA <syohex@gmail.com>'
-  - 'moznion <moznion@gmail.com>'
   - 'Nathaniel Nutter <iam@nnutter.com>'
   - 'Songmu <y.songmu@gmail.com>'
   - 'Manni Heumann <github@lxxi.org>'
   - 'iwata-motonori <motonori.iwata@dena.com>'
   - 'aereal <aereal@aereal.org>'
+  - 'moznion <moznion@gmail.com>'
+  - 'Daisuke Maki <lestrrat+github@gmail.com>'
   - 'tokuhirom <tokuhirom@gmail.com>'
