Import of TOKUHIROM/Minilla-v2.2.1.tar.gz from CPAN.
gitpan-cpan-distribution: Minilla
gitpan-cpan-version:      v2.2.1
gitpan-cpan-path:         TOKUHIROM/Minilla-v2.2.1.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -12,7 +12,7 @@ build_requires:
 configure_requires:
   Module::Build: '0.38'
 dynamic_config: 0
-generated_by: 'Minilla/v2.1.2, CPAN::Meta::Converter version 2.141520'
+generated_by: 'Minilla/v2.2.0, CPAN::Meta::Converter version 2.141520'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -31,7 +31,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v2.2.0
+    version: v2.2.1
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -161,10 +161,10 @@ requires:
   perl: '5.008005'
   version: '0'
 resources:
-  bugtracker: https://git@github.com/tokuhirom/Minilla/issues
-  homepage: https://git@github.com/tokuhirom/Minilla
-  repository: git://git@github.com/tokuhirom/Minilla.git
-version: v2.2.0
+  bugtracker: https://github.com/tokuhirom/Minilla/issues
+  homepage: https://github.com/tokuhirom/Minilla
+  repository: git://github.com/tokuhirom/Minilla.git
+version: v2.2.1
 x_authority: cpan:TOKUHIROM
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
@@ -197,4 +197,5 @@ x_contributors:
   - 'aereal <aereal@aereal.org>'
   - 'moznion <moznion@gmail.com>'
   - 'Daisuke Maki <lestrrat+github@gmail.com>'
+  - 'Klaus Eichner <klaus03@gmail.com>'
   - 'tokuhirom <tokuhirom@gmail.com>'
