Import of TOKUHIROM/Minilla-v2.3.0.tar.gz from CPAN.
gitpan-cpan-distribution: Minilla
gitpan-cpan-version:      v2.3.0
gitpan-cpan-path:         TOKUHIROM/Minilla-v2.3.0.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -6,6 +6,7 @@ build_requires:
   CPAN::Meta::Validator: '0'
   File::Temp: '0'
   JSON: '0'
+  Module::Build::Tiny: '0.035'
   Test::More: '0.98'
   Test::Output: '0'
   Test::Requires: '0'
@@ -31,7 +32,7 @@ no_index:
 provides:
   Minilla:
     file: lib/Minilla.pm
-    version: v2.2.1
+    version: v2.3.0
   Minilla::CLI:
     file: lib/Minilla/CLI.pm
   Minilla::CLI::Build:
@@ -164,7 +165,7 @@ resources:
   bugtracker: https://github.com/tokuhirom/Minilla/issues
   homepage: https://github.com/tokuhirom/Minilla
   repository: git://github.com/tokuhirom/Minilla.git
-version: v2.2.1
+version: v2.3.0
 x_authority: cpan:TOKUHIROM
 x_contributors:
   - 'mattn <mattn.jp@gmail.com>'
@@ -189,13 +190,14 @@ x_contributors:
   - 'Helmut Wollmersdorfer <helmut@wollmersdorfer.at>'
   - 'Kenichi Ishigaki <ishigaki@cpan.org>'
   - 'Graham Knop <haarg@haarg.org>'
-  - 'Syohei YOSHIDA <syohex@gmail.com>'
   - 'Nathaniel Nutter <iam@nnutter.com>'
   - 'Songmu <y.songmu@gmail.com>'
   - 'Manni Heumann <github@lxxi.org>'
   - 'iwata-motonori <motonori.iwata@dena.com>'
   - 'aereal <aereal@aereal.org>'
-  - 'moznion <moznion@gmail.com>'
   - 'Daisuke Maki <lestrrat+github@gmail.com>'
   - 'Klaus Eichner <klaus03@gmail.com>'
+  - 'moznion <moznion@gmail.com>'
+  - 'Syohei YOSHIDA <syohex@gmail.com>'
+  - 'karupanerura <karupa@cpan.org>'
   - 'tokuhirom <tokuhirom@gmail.com>'
